# ozcodingschool_be_02_homework

./: .gitignore  Chapter05_08_김범준.ipynb  Chapter09_13_김범준_ipnb.ipynb  README.md  chapter14~16_김범준.ipynb  data.js  error_log.txt
10___aws/: README.md
1___PYTHON/: Chapter04_기초과제_김범준.ipynb  Mini_Project_김범준.ipynb  day5___chapter17_20_김범준.ipynb
20240105_html_1차/: 2 프로필 페이지 만들기.html
20240108_css_2차/: 6 박스로 간단하게 꾸미기.html  7 프로필 페이지 css.html  a.html
20240109 css day3/: chat.css  snow.html  test.html
2___HTML_CSS/: README.md
5___adminPage/: index.html
6___bootstrap/: README.md  index.html
7___oz_crawling/: README.md  kream.py  melon.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  naver_5.py  naver_6.py  selenium_1.py  selenium_2.py  selenium_3.py  selenium_4.py  t.py
8___db/: 1___1__db생성_삭제_조회.sql  1___2__user생성_삭제_조회.sql  1___3__데이터_생성_삭제_조회.sql  2___1__데이터_생성_삭제_조회.sql  2___2__테이블 생성.sql  2___3__data_generate.py  2___4__실습.sql  3___1__pymysql.py  3___2__pymysql.py  3___3__refactoring.py  3___4__airBNB더미데이터.py  3___4__airbnb_pymysql.py  3___4__airbnb테이블생성.sql  3___5__yes24_crawl.ipynb  3___5__셀레니움경로지정.py  3___5__셀레니움설치.py  4___1__yes24테이블생성.sql  4___2__yes24_데이터sql조회.sql  4___3__sakila.sql  5___1__mongodb.js  5___2__pymongodb.ipynb  README.md
9___webCrawlingProject/: 01___createTable.sql  02___kyobo.ipynb  03___kyobo copy.py  03___kyobo.py  03___kyoboCrawlingDataToMysql.py  04___yes24_crawl.ipynb  05___yes24.py  06___average.ipynb  README.md  v  (+11 more)
z_5___django/day04/project01/: pyproject.toml
z_5___django/day04/project01/boards/migrations/: 0002_board_date_board_likes_board_reviews_board_writer.py
z_5___django/day04/project01/config/: settings.py
z_5___django/day04/project01/feeds/: urls.py
z_5___django/day04/project01/reviews/: serializers.py
z_5___django/day04/project01/users/: serializers.py  views.py
z_6___extraClassForPythonWebFramework/flask/flaskapp/: app.py  create_tables.py  pyproject.toml  pysql.py  repository.py  test_article.py
za2___extraClassForFastapi/fastapi/study_fastapi/: __init__.py  pyproject.toml  test.sh
za2___extraClassForFastapi/fastapi/study_fastapi/app/configs/: __init__.py  base_settings.py
za2___extraClassForFastapi/fastapi/study_fastapi/app/models/: comment.py
(+322 files in other folders)
