[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = "exstra_class_python_framework_by_duckbae"
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
flask = "^3.0.2"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pymysql = "^1.1.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120


[tool.isort]
profile = "black"


[tool.mypy]
python_version = 3.11
strict = true
