[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
gunicorn = "^21.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
tortoise-orm = {extras = ["asyncmy"], version = "^0.20.0"}
aerich = "^0.7.2"
cryptography = "^42.0.5"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = 3.11
strict = true
plugins = [
    "pydantic.mypy"
]